<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SearchActivity"
    android:background="@color/white">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/relative_layout_search"
        android:backgroundTint="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|enterAlways">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/search_margin"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:background="@drawable/bg_search">
                <ImageView
                    android:id="@+id/iv_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_search_black_24dp"
                    android:tint="@color/gray"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/icon_search"/>
                <android.support.design.widget.TextInputLayout
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/iv_search"
                    android:layout_toStartOf="@+id/iv_setting"
                    android:id="@+id/text_input_layout_search"
                    app:hintAnimationEnabled="false"
                    app:hintEnabled="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_text_search"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="@dimen/search_margin"
                        android:layout_marginStart="@dimen/search_margin"
                        android:paddingRight="@dimen/search_padding"
                        android:paddingLeft="@dimen/search_padding"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:imeOptions="actionSearch"
                        android:inputType="text"
                        android:hint="@string/search_hint"
                        android:background="@android:color/transparent"/>
                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:id="@+id/iv_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:tint="@color/gray"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_more_vert_black_24dp"
                    android:contentDescription="@string/icon_setting"/>
            </RelativeLayout>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ImageView
            android:id="@+id/iv_enter_keyword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/img_enter_keyword"
            android:contentDescription="@string/img_wait" />
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            android:scrollbars="vertical"
            android:scrollbarStyle="outsideOverlay"
            android:layout_marginStart="@dimen/recycler_margin"
            android:layout_marginEnd="@dimen/recycler_margin"
            android:layout_marginTop="@dimen/recycler_margin"
            android:paddingStart="@dimen/recycler_padding"
            android:paddingEnd="@dimen/recycler_padding">
        </android.support.v7.widget.RecyclerView>
        <ProgressBar
            android:id="@+id/progress_bar_search"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:maxHeight="50dp"
            android:layout_gravity="center|bottom"
            android:indeterminateTint="@color/darkGray"
            android:layout_marginBottom="20dp" />
        <TextView
            android:id="@+id/tv_progress_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="5dp"
            android:text="@string/loading_text" />
    </FrameLayout>
</android.support.design.widget.CoordinatorLayout>